fix: improve print button styling and visibility in App component

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -18,7 +18,6 @@
 .controls {
   position: relative;
   height: 100%;
-  flex-grow: 1;
 
   display: flex;
   flex-direction: column;
@@ -30,7 +29,6 @@
 .navigation {
   position: relative;
   height: 100%;
-  flex-grow: 1;
 
   display: flex;
   flex-direction: column;
@@ -59,6 +57,22 @@
   .navigation {
     display: none !important;
   }
+}
+
+.print.mode.button {
+  position: fixed;
+  top: 0.5rem;
+  right: 0.5rem;
+  
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  
+  font-size: 1.5rem;
+  color: hsl(270, 100%, 4%);
+  z-index: 1000;
 }
 
 /*  */
